--- a/OpenGL_Tutorial/OpenGL_Tutorial.vcxproj.filters
+++ b/OpenGL_Tutorial/OpenGL_Tutorial.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
